# meta_hackathon

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  requirements.txt  rl_meta_environment.py
